--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
   },
   "devDependencies": {
     "chai": "^4.3.4",
-    "mocha": "^8.3.2",
-    "rewire": "^5.0.0"
+    "mocha": "^8.3.2"
   }
 }
