--- a/client/package.json
+++ b/client/package.json
@@ -38,6 +38,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:3001",
-  "homepage": "http://seanrusselldev.com/novella-app"
+  "proxy": "http://localhost:3001"
 }
