--- a/client/package.json
+++ b/client/package.json
@@ -2,17 +2,18 @@
   "name": "book-store-client",
   "version": "0.1.0",
   "private": true,
+  "homepage": "/pages/novella",
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^5.15.3",
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
+    "@fortawesome/fontawesome-free": "^5.15.4",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.1.10",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-query": "^3.16.0",
-    "react-router-dom": "^5.2.0",
+    "react-query": "^3.39.3",
+    "react-router-dom": "^5.3.4",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -38,6 +39,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:3001"
-  
+  "proxy": "http://localhost:8080"
 }
