--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "start": "node server/index.js",
     "test": "mocha server/tests/**/*.spec.js",
-    "build": "cd client && yarn install && yarn run build"
+    "build": "cd client && npm install && npm run build"
   },
   "keywords": [],
   "license": "ISC",
@@ -17,14 +17,13 @@
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "jsonwebtoken": "^8.5.1",
-    "lodash.clonedeep": "^4.5.0",
-    "string-strip-html": "^8.2.13"
+    "lodash.clonedeep": "^4.5.0"
   },
   "devDependencies": {
     "chai": "^4.3.4",
     "mocha": "^8.3.2"
   },
   "engines": {
-    "node": "v12.21.0"
+    "node": "^16"
   }
 }
